k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api-service
  namespace: bootcamp2
spec:
  selector:
    app: task-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
